--- a/source/stylesheets/glide/_variables.scss
+++ b/source/stylesheets/glide/_variables.scss
@@ -12,3 +12,10 @@ $titles: 'Raleway', 'Century Gothic', 'Helvetica Neue', helvetica, sans-serif;
 
 // Values
 $inside-width: 58em;
+
+// Responsive
+$phone-1: 500px;
+$tablet-1: 700px;
+$tablet-2: 900px;
+$desktop-1: 1200px;
+$desktop-2: 1400px;
