Added an extension for printing sitemap to the data folder, and building an html navigation off of it. Still a bit rough around the edges.

--- a/source/book/index.html.erb
+++ b/source/book/index.html.erb
@@ -1,9 +1,26 @@
 ---
+pagination:
+  for: book
+  per_page: 8
 ---
-
 <div class="welcome">
   <h1>Middleman is Watching</h1>
   <p class="doc">
     <%= link_to "Read Online Documentation", "http://middlemanapp.com/" %>
   </p>
+  <% pagination.each do |book_page| %>
+    - <%= link_to discover_title(book_page), book_page.url %>
+  <% end %>
+
+  Page <%= pagination.page_num %> of <%= pagination.total_page_num %>
+
+  Showing <%= pagination.per_page %> per page
+
+  <%= link_to "First page", pagination.first_page.url %>
+
+  <%= link_to "Prev page", pagination.prev_page.url if pagination.prev_page %>
+
+  <%= link_to "Next page", pagination.next_page.url if pagination.next_page %>
+
+  <%= link_to "Last page", pagination.first_page.url %>
 </div>
